# alsa-ac3enc

./: AUTHORS  Makefile.am  README  ac3.conf  configure.ac  pa_mapping.conf  pcm_ac3.c
